--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: bfo9000_left
+    shield: hrk9001_left
   - board: nice_nano_v2
-    shield: bfo9000_right
+    shield: hrk9001_right
